--- a/User.html
+++ b/User.html
@@ -29,8 +29,8 @@
               <a class="navbar-brand logo" href="index.html"
                 ><img
                   class="img-logo"
-                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
-                  alt="logo"
+                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f.png"
+                  alt=""
               /></a>
               <button
                 class="navbar-toggler"
@@ -59,11 +59,7 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="LoMasPopular.html"
-                          >Populares</a
-                        >
-                      </li>
+                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -114,7 +110,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item" href="#">Todas las noticias</a>
+                        <a class="dropdown-item" href="todas-las-noticias.html">Todas las noticias</a>
                       </li>
                     </ul>
                   </li>
@@ -126,12 +122,10 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="Search.html"
-              ><i class="bi bi-search"></i
-            ></a>
+            <a class="icons-color" href="#"><i class="bi bi-search"></i></a>
           </div>
           <div class="lista">
-            <a class="icons-color" href="listaHistorial.html"
+            <a class="icons-color" href="#"
               ><i class="bi bi-bookmark-fill"></i
             ></a>
           </div>
@@ -145,61 +139,45 @@
     </header>
 
     <main class="main">
-      <div class="img-fondo">
-        <img
-          src="Images/rem-PhotoRoom.png-PhotoRoom.png"
-          alt="rem"
-          class="rem"
-        />
-        <div class="wrapper">
-          <div class="form-box login">
-            <h2>Acceder</h2>
-            <form action="#">
-              <div class="input-box">
-                <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <input type="email" required />
-                <label>Email</label>
-              </div>
-              <div class="input-box">
-                <span class="icon"
-                  ><ion-icon name="lock-closed"></ion-icon
-                ></span>
-                <input type="password" required />
-                <label>Contraseña</label>
-              </div>
-              <div class="remember-forgot">
-                <label><input type="checkbox" />Recordar</label>
-                <a href="#" class="forget">olvidaste tu contraseña?</a>
-              </div>
-              <button type="submit" class="btn">Acceder</button>
-              <div class="login-register">
-                <p>
-                  ¿No tienes una cuenta?<a
-                    href="Registration.html"
-                    class="register-link forget"
-                    >registro</a
-                  >
-                </p>
-              </div>
-            </form>
+     <div class="wrapper">
+      <div class="form-box login">
+        <h2 >Acceder</h2>
+        <form action="#">
+          <div class="input-box">
+            <span class="icon"><ion-icon name="mail"></ion-icon></span>
+            <input type="email" required>
+            <label>Email</label>
           </div>
-        </div>
+          <div class="input-box">
+            <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+            <input type="password" required>
+            <label>Contraseña</label>
+          </div>
+          <div class="remember-forgot">
+            <label><input type="checkbox">Recordar</label>
+            <a href="#" class="forget">olvidaste tu contraseña?</a>
+          </div>
+          <button type="submit" class="btn">Acceder</button>
+          <div class="login-register">
+            <p>¿No tienes una cuenta?<a href="Registration.html" class="register-link forget">registro</a></p>
+          </div>
+        </form>
       </div>
+      
+     </div>
     </main>
 
-    <hr class="hr" />
+    <hr class="hr">
 
     <footer class="footer">
       <div class="container">
         <div class="termsuse gap-5">
           <ul class="link-list">
-            <li class="t"><a href="#" class="a">Terminos de uso </a></li>
-            <li class="t"><a href="#" class="a">Politica de privacidad</a></li>
-            <li class="t">
-              <a href="#" class="a">Consentimientos de cookies</a>
-            </li>
+            <li class="t"> <a href="#" class="a">Terminos de uso </a></li>
+            <li class="t"> <a href="#" class="a">Politica de privacidad</a> </li>
+            <li class="t"> <a href="#" class="a">Consentimientos de cookies</a> </li>
           </ul>
-          <hr class="hr" />
+          <hr class="hr">
           <div class="row">
             <div class="col">
               <ul class="menu-social">
@@ -289,9 +267,7 @@
             <div class="col">
               <ul class="menu-widget">
                 <h5 class="title-widget">Cuenta</h5>
-                <li>
-                  <a href="#" class="text-decoration-none">Crear cuenta</a>
-                </li>
+                <li><a href="#" class="text-decoration-none">Crear cuenta</a></li>
                 <li><a href="#" class="text-decoration-none">Acceder</a></li>
               </ul>
             </div>
@@ -301,20 +277,16 @@
           </div>
         </div>
       </div>
-    </footer>
+      </footer>
+     
+   
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
