--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <title>Club Manga</title>
   </head>
   <body>
-    <header class="header fixed-top">
+    <header class="header">
       <div
         class="container d-flex justify-content-between align-items-center space"
       >
         <div class="space">
           <nav class="navbar navbar-expand-lg bg-body-tertiary classpadding">
             <div class="container-fluid">
-              <a class="navbar-brand logo" href="index.html"
+              <a class="navbar-brand logo" href="#"
                 ><img
                   class="img-logo"
-                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
-                  alt="logo"
+                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f.png"
+                  alt=""
               /></a>
               <button
                 class="navbar-toggler"
@@ -46,7 +46,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link text-menu" href="index.html">Home</a>
+                    <a class="nav-link text-menu" href="#">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -59,11 +59,7 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="LoMasPopular.html"
-                          >Populares</a
-                        >
-                      </li>
+                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -114,7 +110,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item" href="#">Todas las noticias</a>
+                        <a class="dropdown-item" href="todas-las-noticias.html">Todas las noticias</a>
                       </li>
                     </ul>
                   </li>
@@ -126,12 +122,10 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="Search.html"
-              ><i class="bi bi-search"></i
-            ></a>
+            <a class="icons-color" href="#"><i class="bi bi-search"></i></a>
           </div>
           <div class="lista">
-            <a class="icons-color" href="listaHistorial.html"
+            <a class="icons-color" href="#"
               ><i class="bi bi-bookmark-fill"></i
             ></a>
           </div>
@@ -177,7 +171,7 @@
           </div>
           <div class="carousel-inner principal">
             <div class="carousel-item active">
-              <a href="onepiece.html"
+              <a href="#"
                 ><img
                   src="Images/onepiece.webp"
                   class="d-block w-100"
@@ -239,7 +233,8 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">My Hero Academia</h1>
-              <a href="Myheroa.html"><button class="Card-btn">Leer</button></a>
+              <p class="Card-info seccion-1"></p>
+              <button class="Card-btn">Leer</button>
             </div>
           </div>
 
@@ -251,6 +246,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Jujutsu kaisen</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -263,6 +259,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Cowboy-Bebop</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -274,6 +271,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Hunter x Hunter</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -285,6 +283,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Berserk</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -296,6 +295,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">20TH Century Boys</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -342,6 +342,7 @@
             <img src="Images/luffy-01.png" alt="Luffy" class="img-1" />
             <img src="Images/luffy-02.png" alt="Luffy" class="img-2" />
           </article>
+
         </div>
 
         <h2 class="seccion-1">Ultimos acualizados:</h2>
@@ -354,6 +355,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Bungo stray dogs</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -366,6 +368,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Gunma cham</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -378,6 +381,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">skip and loafer</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -389,6 +393,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">The marginal servive</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -400,6 +405,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">to you eternity</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -411,6 +417,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">the ancient magus bride</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -453,6 +460,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Chainsaw-man</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -461,6 +469,7 @@
             <img src="Images/blue lock.jpe" alt="blue lock" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Blue Lock</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -469,6 +478,7 @@
             <img src="Images/monster.webp" alt="Monster" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Monster</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -476,6 +486,7 @@
             <img src="Images/nana.jpg" alt="Nana" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Nana</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -483,6 +494,7 @@
             <img src="Images/opiece.jpg" alt="Onepiece" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">One Piece</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -494,6 +506,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">tokio revengers</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -529,6 +542,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Buta no fukusho</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -537,6 +551,7 @@
             <img src="Images/jojos.jpg" alt="Jojos" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Jojos</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -549,6 +564,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Bakemonogatari</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -556,6 +572,7 @@
             <img src="Images/mf ghost.jpg" alt="Mf-ghost" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Mf-ghost</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -563,6 +580,7 @@
             <img src="Images/tonari.jpg" alt="tonari" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Tonari no kyuuketsuki-san</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -570,6 +588,7 @@
             <img src="Images/gokusotsu.webp" alt="gokusotsu" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">gokusotsu</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -588,6 +607,7 @@
             <img src="Images/baki.jpg" alt="Baki" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Baki</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -600,6 +620,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Record of ragnarok</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -608,6 +629,7 @@
             <img src="Images/mashl.jpg" alt="Mashle" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">Mashle</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -615,6 +637,7 @@
             <img src="Images/daidark.jpg" alt="daidark" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">dai dark</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -626,6 +649,7 @@
             />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">dark gatherin</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -633,6 +657,7 @@
             <img src="Images/hajimete.jpe" alt="hajimete" class="Card-img" />
             <div class="Card-body">
               <h1 class="Card-title seccion-1">hajimete</h1>
+              <p class="Card-info seccion-1"></p>
               <button class="Card-btn">Leer</button>
             </div>
           </div>
@@ -733,14 +758,8 @@
           <div class="col">
             <ul class="menu-widget">
               <h5 class="title-widget">Cuenta</h5>
-              <li>
-                <a href="Registration.html" class="text-decoration-none"
-                  >Crear cuenta</a
-                >
-              </li>
-              <li>
-                <a href="User.html" class="text-decoration-none">Acceder</a>
-              </li>
+              <li><a href="Registration.html" class="text-decoration-none">Crear cuenta</a></li>
+              <li><a href="User.html" class="text-decoration-none">Acceder</a></li>
             </ul>
           </div>
         </div>
